Add state machine visualizations

--- a/demo-a.mdx
+++ b/demo-a.mdx
@@ -1,3 +1,4 @@
+import { Image } from '@mdx-deck/components'
 import { App } from './demo-a/App.js'
 import { App as AppWithMachine } from './demo-a/AppWithMachine.js'
 import { CodeSurferLayout } from 'code-surfer'
@@ -186,6 +187,19 @@ export const modalMachine = Machine({
 ```
 
 </CodeSurferLayout>
+
+---
+
+# Visualization
+
+<Image
+  src={require('file-loader!./images/visibility-state-machine.png')}
+  style={{
+    margin: 'auto',
+    height: '50vh',
+    backgroundSize: 'contain',
+  }}
+/>
 
 ---
 
